--- a/createacc.html
+++ b/createacc.html
@@ -24,7 +24,7 @@
             <a href="Homepage.html" class="home-page">Home Page</a>
             <script>
                 function checkPassword(event) {
-                    event.preventDefault(); // Prevent form from submitting immediately
+                    event.preventDefault();
                     const password = document.getElementById("password").value;
                     const confirmPassword = document.getElementById("confirmPassword").value;
                     if (password === confirmPassword) {
