--- a/vehicle-renting-main.html
+++ b/vehicle-renting-main.html
@@ -63,31 +63,31 @@
                 <img src="toyota1.jpeg" alt="Car 1">
                 <h3>TOYOTA CAR</h3>
                 <p>Start per day $100</p>
-                <a href="booknow.html" class="book-btn">Book Now</a>
+                <a href="booknow.html" class="book-btn">Rent Now</a>
             </div>
             <div class="vehicle-card">
                 <img src="mahindra1.jpeg" alt="Car 2">
                 <h3>MAHINDRA CAR</h3>
                 <p>Start per day $80</p>
-                <a href="booknow.html" class="book-btn">Book Now</a>
+                <a href="booknow.html" class="book-btn">Rent Now</a>
             </div>
             <div class="vehicle-card">
                 <img src="Unicorn1.jpeg" alt="Bike 1">
                 <h3>HONDA Unicorn</h3>
                 <p>Start per day $50</p>
-                <a href="booknow.html" class="book-btn">Book Now</a>
+                <a href="booknow.html" class="book-btn">Rent Now</a>
             </div>
             <div class="vehicle-card">
                 <img src="innova1.jpeg" alt="Car 2">
                 <h3>Innova(7 seater)</h3>
                 <p>Start per day $75</p>
-                <a href="booknow.html" class="book-btn">Book Now</a>
+                <a href="booknow.html" class="book-btn">Rent Now</a>
             </div>
             <div class="vehicle-card">
                 <img src="hero1.jpeg" alt="Bike 1">
                 <h3>HERO cycle</h3>
                 <p>Start per day $10</p>
-                <a href="booknow.html" class="book-btn">Book Now</a>
+                <a href="booknow.html" class="book-btn">Rent Now</a>
             </div>
         </div>
     </div>
