--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <a href="Homepage.html" class="home-page">Home Page</a>
             <script>
                 function submit(event) {
-                    event.preventDefault(); // Prevent form from submitting immediately
+                    event.preventDefault();
                     alert("Successful!");
                 }
             </script>
