--- a/booknow.html
+++ b/booknow.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Book Now</h2>
+        <h2>Rent Now</h2>
         <form onsubmit="confirmBooking(event)">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
