--- a/show-vehicle.html
+++ b/show-vehicle.html
@@ -52,7 +52,7 @@
                 <th>Brand</th>
                 <th>Model</th>
                 <th>Type</th>
-                <th>License No</th>
+                <th>Registration No</th>
                 <th>Action</th>
             </tr>
         </thead>
